@@ -22,7 +22,6 @@ import static com.publicissapient.kpidashboard.apis.util.IterationKpiHelper.tran
 
 import java.text.DecimalFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -50,9 +49,9 @@ import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPIExcelColumn;
 import com.publicissapient.kpidashboard.apis.errors.ApplicationException;
 import com.publicissapient.kpidashboard.apis.jira.service.iterationdashboard.JiraIterationKPIService;
-import com.publicissapient.kpidashboard.apis.model.IterationKpiData;
-import com.publicissapient.kpidashboard.apis.model.IterationKpiModalValue;
-import com.publicissapient.kpidashboard.apis.model.IterationKpiValue;
+import com.publicissapient.kpidashboard.apis.model.IssueKpiModalValue;
+import com.publicissapient.kpidashboard.apis.model.KpiData;
+import com.publicissapient.kpidashboard.apis.model.KpiDataGroup;
 import com.publicissapient.kpidashboard.apis.model.KpiElement;
 import com.publicissapient.kpidashboard.apis.model.KpiRequest;
 import com.publicissapient.kpidashboard.apis.model.Node;
@@ -62,7 +61,6 @@ import com.publicissapient.kpidashboard.apis.util.KPIExcelUtility;
 import com.publicissapient.kpidashboard.apis.util.KpiDataHelper;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.constant.NormalizedJira;
-import com.publicissapient.kpidashboard.common.model.application.DataCount;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory;
@@ -80,7 +78,6 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 	public static final String DIR = "DIR";
 	public static final String DEFECT_DENSITY = "Defect Density";
 	public static final String LINKED_ISSUES = "linkedIssues";
-	private static final String OVERALL = "Overall";
 	private static final String TOTAL_ISSUES = "totalIssues";
 	private static final String COMPLETED_ISSUES = "completedIssue";
 	private static final String NOT_APPLICABLE = "N/A";
@@ -92,16 +89,12 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 	private ConfigHelperService configHelperService;
 
 	@Autowired
-	private KpiHelperService kpiHelperService;
-
-	@Autowired
 	private CustomApiConfig customApiConfig;
 
 	@Override
 	public KpiElement getKpiData(KpiRequest kpiRequest, KpiElement kpiElement, Node sprintNode)
 			throws ApplicationException {
-		DataCount trendValue = new DataCount();
-		projectWiseLeafNodeValue(sprintNode, trendValue, kpiElement, kpiRequest);
+		projectWiseLeafNodeValue(sprintNode, kpiElement, kpiRequest);
 		return kpiElement;
 	}
 
@@ -128,14 +121,13 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 			if (null != dbSprintDetail) {
 				FieldMapping fieldMapping = configHelperService.getFieldMappingMap()
 						.get(leafNode.getProjectFilter().getBasicProjectConfigId());
-				// to modify sprintdetails on the basis of configuration for the project
+				// to modify sprint details on the basis of configuration for the project
 				List<JiraIssueCustomHistory> totalHistoryList = getJiraIssuesCustomHistoryFromBaseClass();
 				List<JiraIssue> totalJiraIssueList = getJiraIssuesFromBaseClass();
-				Set<String> issueList = totalJiraIssueList.stream().map(JiraIssue::getNumber)
-						.collect(Collectors.toSet());
+				Set<String> issueList = totalJiraIssueList.stream().map(JiraIssue::getNumber).collect(Collectors.toSet());
 
-				sprintDetails = transformIterSprintdetail(totalHistoryList, issueList, dbSprintDetail,
-						new ArrayList<>(), fieldMapping.getJiraIterationCompletionStatusKPI133(),
+				sprintDetails = transformIterSprintdetail(totalHistoryList, issueList, dbSprintDetail, new ArrayList<>(),
+						fieldMapping.getJiraIterationCompletionStatusKPI133(),
 						leafNode.getProjectFilter().getBasicProjectConfigId());
 
 				List<String> totalIssue = KpiDataHelper.getIssuesIdListBasedOnTypeFromSprintDetails(sprintDetails,
@@ -146,9 +138,8 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 						Optional.ofNullable(fieldMapping.getJiradefecttype()).orElse(Collections.emptyList()));
 				Set<String> totalSprintReportDefects = new HashSet<>();
 				Set<String> totalSprintReportStories = new HashSet<>();
-				sprintDetails.getTotalIssues().stream().forEach(sprintIssue -> {
-					seperateDefectAndStories(sprintIssue, defectTypes, totalSprintReportDefects, totalSprintReportStories);
-				});
+				sprintDetails.getTotalIssues().forEach(sprintIssue -> separateDefectAndStories(sprintIssue, defectTypes,
+						totalSprintReportDefects, totalSprintReportStories));
 
 				Map<String, Object> mapOfProjectFilters = new LinkedHashMap<>();
 				defectType.add(NormalizedJira.DEFECT_TYPE.getValue());
@@ -157,41 +148,43 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 				uniqueProjectMap.put(basicProjectConfigId, mapOfProjectFilters);
 				mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
 						Collections.singletonList(basicProjectConfigId));
-				List<String> typeNameList = new ArrayList<>(Optional
-						.ofNullable(fieldMapping.getJiraItrQSIssueTypeKPI133()).orElse(Collections.emptyList()));
+				List<String> typeNameList = new ArrayList<>(
+						Optional.ofNullable(fieldMapping.getJiraItrQSIssueTypeKPI133()).orElse(Collections.emptyList()));
 				if (CollectionUtils.isNotEmpty(totalIssue)) {
-					List<JiraIssue> filteredJiraIssue = IterationKpiHelper.getFilteredJiraIssue(totalIssue,
-							totalJiraIssueList);
-					Set<JiraIssue> sprintReportIssueList = KpiDataHelper
-							.getFilteredJiraIssuesListBasedOnTypeFromSprintDetails(sprintDetails,
-									sprintDetails.getTotalIssues(), filteredJiraIssue);
+					List<JiraIssue> filteredJiraIssue = IterationKpiHelper.getFilteredJiraIssue(totalIssue, totalJiraIssueList);
+					Set<JiraIssue> sprintReportIssueList = KpiDataHelper.getFilteredJiraIssuesListBasedOnTypeFromSprintDetails(
+							sprintDetails, sprintDetails.getTotalIssues(), filteredJiraIssue);
 
-					sprintReportIssueList = getTypeNameFilterJiraIssueList(defectTypes, typeNameList,
-							sprintReportIssueList);//has present sprint issue based on getJiraItrQSIssueTypeKPI133 and defectType
+					sprintReportIssueList = getTypeNameFilterJiraIssueList(defectTypes, typeNameList, sprintReportIssueList); // has
+					// present
+					// sprint
+					// issue
+					// based
+					// on
+					// getJiraItrQSIssueTypeKPI133
+					// and
+					// defectType
 
-
-					sprintReportIssueList = getLableFilteredJiraIssues(fieldMapping, defectTypes, sprintReportIssueList);
+					sprintReportIssueList = getLabelFilteredJiraIssues(fieldMapping, defectTypes, sprintReportIssueList);
 
 					// fetched all defects which is linked to current sprint report stories
-					List<JiraIssue> linkedDefects = jiraIssueRepository.findLinkedDefects(mapOfFilters,
-							totalSprintReportStories, uniqueProjectMap);
+					List<JiraIssue> linkedDefects = jiraIssueRepository.findLinkedDefects(mapOfFilters, totalSprintReportStories,
+							uniqueProjectMap);
 
 					// filter defects whose issue type not coming in sprint report
 					List<JiraIssue> subTaskDefects = linkedDefects.stream()
-							.filter(jiraIssue -> !totalSprintReportDefects.contains(jiraIssue.getNumber()))
-							.collect(Collectors.toList());
+							.filter(jiraIssue -> !totalSprintReportDefects.contains(jiraIssue.getNumber())).toList();
 
 					List<JiraIssue> jiraIssueDefects = sprintReportIssueList.stream()
-							.filter(jiraIssue -> totalSprintReportDefects.contains(jiraIssue.getNumber()))
-							.collect(Collectors.toList());
+							.filter(jiraIssue -> totalSprintReportDefects.contains(jiraIssue.getNumber())).toList();
 
 					// forming linked story ids, which may lies outside selected sprint ,fix for
 					// DTS-24813
-					Set<String> linkedStories = jiraIssueDefects.stream().map(JiraIssue::getDefectStoryID)
-							.flatMap(Set::stream).collect(Collectors.toSet());
+					Set<String> linkedStories = jiraIssueDefects.stream().map(JiraIssue::getDefectStoryID).flatMap(Set::stream)
+							.collect(Collectors.toSet());
 
-					List<JiraIssue> jiraIssueLinkedStories = jiraIssueRepository.findByNumberInAndBasicProjectConfigId(
-							new ArrayList<>(linkedStories), basicProjectConfigId);
+					List<JiraIssue> jiraIssueLinkedStories = jiraIssueRepository
+							.findByNumberInAndBasicProjectConfigId(new ArrayList<>(linkedStories), basicProjectConfigId);
 
 					jiraIssueLinkedStories = getJiraIssueLinkedStories(typeNameList, jiraIssueLinkedStories);
 
@@ -200,40 +193,38 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 					List<JiraIssue> totalIssues = new ArrayList<>();
 					totalIssues.addAll(sprintReportIssueList);
 					totalIssues.addAll(subTaskDefects);
-					jiraIssueLinkedStoriesSet = getLableFilteredJiraIssues(fieldMapping, defectTypes, jiraIssueLinkedStoriesSet);
+					jiraIssueLinkedStoriesSet = getLabelFilteredJiraIssues(fieldMapping, defectTypes, jiraIssueLinkedStoriesSet);
 					resultListMap.put(TOTAL_ISSUES, totalIssues);
 					resultListMap.put(LINKED_ISSUES, new ArrayList<>(jiraIssueLinkedStoriesSet));
 				}
 				if (CollectionUtils.isNotEmpty(completedIssue)) {
 					List<JiraIssue> completedIssueList = IterationKpiHelper.getFilteredJiraIssue(completedIssue,
 							totalJiraIssueList);
-					Set<JiraIssue> completedJiraIssue = KpiDataHelper
-							.getFilteredJiraIssuesListBasedOnTypeFromSprintDetails(sprintDetails,
-									sprintDetails.getCompletedIssues(), completedIssueList);
+					Set<JiraIssue> completedJiraIssue = KpiDataHelper.getFilteredJiraIssuesListBasedOnTypeFromSprintDetails(
+							sprintDetails, sprintDetails.getCompletedIssues(), completedIssueList);
 					completedJiraIssue = getTypeNameFilterJiraIssueList(defectTypes, typeNameList, completedJiraIssue);
-					completedJiraIssue = getLableFilteredJiraIssues(fieldMapping, defectTypes, completedJiraIssue);
+					completedJiraIssue = getLabelFilteredJiraIssues(fieldMapping, defectTypes, completedJiraIssue);
 					resultListMap.put(COMPLETED_ISSUES, new ArrayList<>(completedJiraIssue));
 				} else
 					resultListMap.put(COMPLETED_ISSUES, new ArrayList<>());
 			}
-
 		}
 		return resultListMap;
-
 	}
 
-	private static Set<JiraIssue> getLableFilteredJiraIssues(FieldMapping fieldMapping, List<String> defectTypes,
+	private static Set<JiraIssue> getLabelFilteredJiraIssues(FieldMapping fieldMapping, List<String> defectTypes,
 			Set<JiraIssue> jiraIssueSet) {
 		if (CollectionUtils.isNotEmpty(fieldMapping.getJiraLabelsKPI133()) && CollectionUtils.isNotEmpty(defectTypes)) {
 			jiraIssueSet = jiraIssueSet.stream()
-					.filter(jiraIssue -> defectTypes.contains(jiraIssue.getTypeName()) || fieldMapping
-							.getJiraLabelsKPI133().stream().anyMatch(label -> jiraIssue.getLabels().contains(label)))
+					.filter(jiraIssue -> defectTypes.contains(jiraIssue.getTypeName()) ||
+							fieldMapping.getJiraLabelsKPI133().stream().anyMatch(label -> jiraIssue.getLabels().contains(label)))
 					.collect(Collectors.toSet());
 		}
 		return jiraIssueSet;
 	}
 
-	private static void seperateDefectAndStories(SprintIssue sprintIssue, List<String> defectTypes, Set<String> totalSprintReportDefects, Set<String> totalSprintReportStories) {
+	private static void separateDefectAndStories(SprintIssue sprintIssue, List<String> defectTypes,
+			Set<String> totalSprintReportDefects, Set<String> totalSprintReportStories) {
 		if (defectTypes.contains(sprintIssue.getTypeName())) {
 			totalSprintReportDefects.add(sprintIssue.getNumber());
 		} else {
@@ -269,8 +260,7 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 	 * @param kpiRequest
 	 */
 	@SuppressWarnings("unchecked")
-	private void projectWiseLeafNodeValue(Node latestSprint, DataCount trendValue, KpiElement kpiElement,
-			KpiRequest kpiRequest) {
+	private void projectWiseLeafNodeValue(Node latestSprint, KpiElement kpiElement, KpiRequest kpiRequest) {
 
 		String startDate = latestSprint.getSprintFilter().getStartDate();
 
@@ -294,89 +284,95 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 					fieldMapping.getDefectPriorityKPI133());
 			KpiHelperService.addRCAProjectWise(projectWiseRCA, latestSprint, fieldMapping.getIncludeRCAForKPI133());
 			KpiHelperService.getDroppedDefectsFilters(droppedDefects,
-					latestSprint.getProjectFilter().getBasicProjectConfigId(),
-					fieldMapping.getResolutionTypeForRejectionKPI133(),
+					latestSprint.getProjectFilter().getBasicProjectConfigId(), fieldMapping.getResolutionTypeForRejectionKPI133(),
 					fieldMapping.getJiraDefectRejectionStatusKPI133());
 			KpiHelperService.getDefectsWithoutDrop(droppedDefects, jiraIssueList, totalJiraIssues);
 
 			List<String> defectTypes = new ArrayList<>(
 					Optional.ofNullable(fieldMapping.getJiradefecttype()).orElse(Collections.emptyList()));
 			defectTypes.add(NormalizedJira.DEFECT_TYPE.getValue());
-			List<JiraIssue> allDefects = totalJiraIssues.stream()
-					.filter(issue -> defectTypes.contains(issue.getTypeName())).collect(Collectors.toList());
+			List<JiraIssue> allDefects = totalJiraIssues.stream().filter(issue -> defectTypes.contains(issue.getTypeName()))
+					.collect(Collectors.toList());
 			allDefects = KpiHelperService.excludePriorityAndIncludeRCA(allDefects, projectWisePriority, projectWiseRCA);
-			List<JiraIssue> allStory = totalJiraIssues.stream()
-					.filter(issue -> !defectTypes.contains(issue.getTypeName())).collect(Collectors.toList());
+			List<JiraIssue> allStory = totalJiraIssues.stream().filter(issue -> !defectTypes.contains(issue.getTypeName()))
+					.toList();
 			List<JiraIssue> allClosedStory = completedIssueList.stream()
-					.filter(issue -> !defectTypes.contains(issue.getTypeName())).collect(Collectors.toList());
+					.filter(issue -> !defectTypes.contains(issue.getTypeName())).toList();
 			// adding all closed stories
 			List<JiraIssue> closedPlusOpenLinkedStories = new ArrayList<>(allClosedStory);
 
 			if (CollectionUtils.isNotEmpty(allDefects)) {
-
-				List<IterationKpiValue> iterationKpiValues = new ArrayList<>();
-				List<IterationKpiModalValue> overAllUnlinkedmodalValues = new ArrayList<>();
-				List<IterationKpiModalValue> overAlllinkedmodalValues = new ArrayList<>();
-
 				List<JiraIssue> linkedDefectList = new ArrayList<>();
-
 				List<JiraIssue> unlinkedDefectList = new ArrayList<>();
-
 				Map<String, JiraIssue> linkedIssueMap = jiraIssueLinkedIssues.stream()
 						.collect(Collectors.toMap(JiraIssue::getNumber, Function.identity()));
 
-				for (JiraIssue jiraIssue : allDefects) {
-					createLinkDefectListAndUnlinkDefectModal(overAllUnlinkedmodalValues, linkedDefectList,
-							unlinkedDefectList, jiraIssue, totalJiraIssues, fieldMapping, completedIssueList,
-							linkedIssueMap);
-				}
-				Set<String> linkedStoriesSet = linkedDefectList.stream().map(JiraIssue::getDefectStoryID)
-						.flatMap(Set::stream).collect(Collectors.toSet());
+				// Creating map of modal Objects
+				Map<String, IssueKpiModalValue> issueKpiModalObject = KpiDataHelper.createMapOfIssueModal(totalJiraIssues);
+				Set<IssueKpiModalValue> issueData = new HashSet<>();
 
+				for (JiraIssue jiraIssue : allDefects) {
+					createLinkDefectListAndUnlinkDefectModal(issueKpiModalObject, linkedDefectList, unlinkedDefectList, jiraIssue,
+							totalJiraIssues, fieldMapping, completedIssueList, linkedIssueMap, issueData);
+				}
+				Set<String> linkedStoriesSet = linkedDefectList.stream().map(JiraIssue::getDefectStoryID).flatMap(Set::stream)
+						.collect(Collectors.toSet());
 				List<JiraIssue> linkedStoriesJiraIssueList = allStory.stream()
-						.filter(jiraIssue -> linkedStoriesSet.contains(jiraIssue.getNumber()))
-						.collect(Collectors.toList());
+						.filter(jiraIssue -> linkedStoriesSet.contains(jiraIssue.getNumber())).toList();
 
 				// adding all LinkedStories
 				closedPlusOpenLinkedStories.addAll(linkedStoriesJiraIssueList);
 				// Removing duplicates if any
-				closedPlusOpenLinkedStories = closedPlusOpenLinkedStories.stream().distinct()
-						.collect(Collectors.toList());
+				closedPlusOpenLinkedStories = closedPlusOpenLinkedStories.stream().distinct().collect(Collectors.toList());
 
 				double overAllDefectDensity = calculateDefectDensity(closedPlusOpenLinkedStories, linkedDefectList,
 						fieldMapping);
-
 				double overAllDir = calculateDIR(closedPlusOpenLinkedStories, linkedDefectList);
-				createOverallLinkedModal(overAlllinkedmodalValues, linkedDefectList, totalJiraIssues,
-						completedIssueList, fieldMapping);
+				createOverallLinkedModal(issueKpiModalObject, linkedDefectList, totalJiraIssues, completedIssueList,
+						fieldMapping, issueData);
 
-				List<IterationKpiData> data = new ArrayList<>();
-				IterationKpiData overAllLD = new IterationKpiData(LINKED_DEFECTS,
-						Double.valueOf(linkedDefectList.size()), null, null, null, overAlllinkedmodalValues);
-				IterationKpiData overAllDD = new IterationKpiData(DIR + "/" + DEFECT_DENSITY, overAllDir,
-						overAllDefectDensity, null, Constant.PERCENTAGE, "", null);
-				IterationKpiData overAllUD = new IterationKpiData(UNLINKED_DEFECTS,
-						Double.valueOf(unlinkedDefectList.size()), null, null, null, overAllUnlinkedmodalValues);
-				data.add(overAllLD);
-				data.add(overAllDD);
-				data.add(overAllUD);
+				KpiDataGroup dataGroup = new KpiDataGroup();
+				List<KpiData> dataGroup1 = new ArrayList<>();
+				dataGroup1.add(createKpiData(DIR, 1, Constant.PERCENTAGE, overAllDir));
+				dataGroup1.add(createKpiData(DEFECT_DENSITY, 2, "", overAllDefectDensity));
+				dataGroup1.add(createKpiData(LINKED_DEFECTS, 3, "", (double) linkedDefectList.size()));
+				dataGroup1.add(createKpiData(UNLINKED_DEFECTS, 4, "", (double) unlinkedDefectList.size()));
+				dataGroup.setDataGroup1(dataGroup1);
+
 				Map<String, String> markerInfo = new HashMap<>();
 				markerInfo.put(Constant.GREEN, "Represent the open linked stories");
-				IterationKpiValue overAllIterationKpiValue = new IterationKpiValue(OVERALL, OVERALL, data,
-						Arrays.asList("marker"), markerInfo);
-				iterationKpiValues.add(overAllIterationKpiValue);
+				dataGroup.setMarkerInfo(markerInfo);
+				dataGroup.setMetaDataColumns(List.of("marker"));
 
-				trendValue.setValue(iterationKpiValues);
 				kpiElement.setSprint(latestSprint.getName());
 				kpiElement.setModalHeads(KPIExcelColumn.QUALITY_STATUS.getColumns());
-				kpiElement.setTrendValueList(trendValue);
+				kpiElement.setIssueData(issueData);
+				kpiElement.setDataGroup(dataGroup);
 			}
 		}
 	}
 
-	private void createOverallLinkedModal(List<IterationKpiModalValue> overAlllinkedmodalValues,
+	/**
+	 * Creates kpi data object.
+	 *
+	 * @param name
+	 * @param order
+	 * @param unit
+	 * @return
+	 */
+	private KpiData createKpiData(String name, Integer order, String unit, Double kpiValue) {
+		KpiData data = new KpiData();
+		data.setName(name);
+		data.setOrder(order);
+		data.setUnit(unit);
+		data.setShowAsLegend(false);
+		data.setKpiValue(kpiValue);
+		return data;
+	}
+
+	private void createOverallLinkedModal(Map<String, IssueKpiModalValue> issueKpiModalObject,
 			List<JiraIssue> linkedDefectList, List<JiraIssue> totalJiraIssues, List<JiraIssue> completedIssueList,
-			FieldMapping fieldMapping) {
+			FieldMapping fieldMapping, Set<IssueKpiModalValue> issueData) {
 		Map<String, List<JiraIssue>> storyWithLinkedDefects = new HashMap<>();
 		Map<String, JiraIssue> totalStoriesMap = totalJiraIssues.stream()
 				.collect(Collectors.toMap(JiraIssue::getNumber, Function.identity()));
@@ -391,21 +387,17 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 					storyWithLinkedDefects.put(storyId, defects);
 				}
 			}
-
 		}
 
 		storyWithLinkedDefects.forEach((storyId, defects) -> {
 			JiraIssue jiraIssue = totalStoriesMap.get(storyId);
 			List<JiraIssue> jiraIssueList = new ArrayList<>();
 			jiraIssueList.add(jiraIssue);
-			Map<String, IterationKpiModalValue> modalObjectMap = KpiDataHelper.createMapOfModalObject(jiraIssueList);
-			IterationKpiModalValue jiraIssueModalObject = modalObjectMap.get(jiraIssue.getNumber());
-			KPIExcelUtility.populateIterationKPI(overAlllinkedmodalValues, new ArrayList<>(), jiraIssue, fieldMapping,
-					modalObjectMap);
-			Map<String, String> linkedDefects = defects.stream()
-					.collect(Collectors.toMap(
-							jiraIssue1 -> jiraIssue1.getNumber() + " ( " + jiraIssue1.getPriority() + " ) ",
-							JiraIssue::getUrl));
+			KPIExcelUtility.populateIssueModal(jiraIssue, fieldMapping, issueKpiModalObject);
+			IssueKpiModalValue jiraIssueModalObject = issueKpiModalObject.get(jiraIssue.getNumber());
+			issueData.add(jiraIssueModalObject);
+			Map<String, String> linkedDefects = defects.stream().collect(Collectors
+					.toMap(jiraIssue1 -> jiraIssue1.getNumber() + " ( " + jiraIssue1.getPriority() + " ) ", JiraIssue::getUrl));
 			jiraIssueModalObject.setLinkedDefefect(linkedDefects);
 			jiraIssueModalObject.setDefectInjectRate(String.valueOf(defects.size()));
 			jiraIssueModalObject
@@ -421,13 +413,12 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 	/**
 	 * calculate based on total linked defects created this sprint divide by Sum of
 	 * the story point of closed + open linked stories
-	 * 
+	 *
 	 * @param closedPlusOpenLinkedStories
 	 * @param linkedDefect
 	 * @param fieldMapping
 	 * @return
 	 */
-
 	private double calculateDefectDensity(List<JiraIssue> closedPlusOpenLinkedStories, List<JiraIssue> linkedDefect,
 			FieldMapping fieldMapping) {
 
@@ -438,18 +429,19 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 		if (CollectionUtils.isEmpty(closedPlusOpenLinkedStories)) {
 			return 0;
 		}
-		if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
-				&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
+		if (StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria()) &&
+				fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
 			double storyPointSum = closedPlusOpenLinkedStories.stream()
-					.filter(jiraIssue -> Objects.nonNull(jiraIssue.getStoryPoints()))
-					.mapToDouble(JiraIssue::getStoryPoints).sum();
+					.filter(jiraIssue -> Objects.nonNull(jiraIssue.getStoryPoints())).mapToDouble(JiraIssue::getStoryPoints)
+					.sum();
 			return (Math.round(100.0 * (storyPointSum == 0 ? 0 : linkedDefect.size() / storyPointSum)) / 100.0);
 		} else {
 			int originalEstimateMinutesSum = closedPlusOpenLinkedStories.stream()
 					.filter(jiraIssue -> Objects.nonNull(jiraIssue.getOriginalEstimateMinutes()))
 					.mapToInt(JiraIssue::getOriginalEstimateMinutes).sum();
 			double originalEstimateInDays = (double) originalEstimateMinutesSum / 480;
-			return originalEstimateInDays == 0 ? 0
+			return originalEstimateInDays == 0
+					? 0
 					: Double.parseDouble(decformat.format(linkedDefect.size() / originalEstimateInDays));
 		}
 	}
@@ -457,7 +449,7 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 	/**
 	 * calculate based on total linked defects divide by total closed + open linked
 	 * stories
-	 * 
+	 *
 	 * @param closedPlusOpenLinkedStories
 	 * @param linkedDefect
 	 * @return
@@ -478,60 +470,57 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 	 * This is a Java method that takes in a set of parameters and checks Jira issue
 	 * and adds it to either a list of linked or unlinked defects accordingly.
 	 */
-
-	private void createLinkDefectListAndUnlinkDefectModal(List<IterationKpiModalValue> overAllUnlinkedmodalValues, // NOSONAR
+	private void createLinkDefectListAndUnlinkDefectModal(Map<String, IssueKpiModalValue> issueKpiModalObject, // NOSONAR
 			List<JiraIssue> linkedDefect, List<JiraIssue> unlinkedDefect, JiraIssue jiraIssue,
 			List<JiraIssue> totalJiraIssues, FieldMapping fieldMapping, List<JiraIssue> completedIssueList,
-			Map<String, JiraIssue> linkedIssueMap) {
+			Map<String, JiraIssue> linkedIssueMap, Set<IssueKpiModalValue> issueData) {
 
 		Map<String, JiraIssue> totalStoriesMap = totalJiraIssues.stream()
 				.collect(Collectors.toMap(JiraIssue::getNumber, Function.identity()));
 
-		// Creating map of modal Objects
-		Map<String, IterationKpiModalValue> modalObjectMap = KpiDataHelper.createMapOfModalObject(totalJiraIssues);
-
 		if (CollectionUtils.isNotEmpty(jiraIssue.getDefectStoryID())) {
 			List<JiraIssue> linkedJiraIssueStoryList = new ArrayList<>();
-			filtersLinkedStories(overAllUnlinkedmodalValues, unlinkedDefect, jiraIssue, totalStoriesMap, fieldMapping,
-					linkedJiraIssueStoryList, modalObjectMap, linkedIssueMap);
+			filtersLinkedStories(issueKpiModalObject, unlinkedDefect, jiraIssue, totalStoriesMap, fieldMapping,
+					linkedJiraIssueStoryList, linkedIssueMap, issueData);
 			if (CollectionUtils.isNotEmpty(linkedJiraIssueStoryList)) {
 				linkedDefect.add(jiraIssue);
-				setKpiSpecificData(jiraIssue, fieldMapping, modalObjectMap, linkedJiraIssueStoryList, true,
-						completedIssueList);
+				IssueKpiModalValue data = issueKpiModalObject.get(jiraIssue.getNumber());
+				setKpiSpecificData(fieldMapping, data, linkedJiraIssueStoryList, true, completedIssueList);
 			}
 
 		} else if (!unlinkedDefect.contains(jiraIssue)) {
 			unlinkedDefect.add(jiraIssue);
-			KPIExcelUtility.populateIterationKPI(overAllUnlinkedmodalValues, new ArrayList<>(), jiraIssue, fieldMapping,
-					modalObjectMap);
-			setKpiSpecificData(jiraIssue, fieldMapping, modalObjectMap, new ArrayList<>(), false, null);
+			KPIExcelUtility.populateIssueModal(jiraIssue, fieldMapping, issueKpiModalObject);
+			IssueKpiModalValue data = issueKpiModalObject.get(jiraIssue.getNumber());
+			setKpiSpecificData(fieldMapping, data, new ArrayList<>(), false, null);
+			issueData.add(data);
 		}
-
 	}
 
 	/**
 	 * if any defects is linked to stories then only consider to linked story and if
 	 * any defects is linked to defect then consider unlinked fix for DTS-23222
-	 * 
-	 * @param overAllUnlinkedmodalValues
+	 *
 	 * @param unlinkedDefect
 	 * @param jiraIssue
 	 * @param totalStoriesMap
 	 * @param fieldMapping
 	 * @param linkedJiraIssueStoryList
+	 * @param issueData
 	 */
-	private void filtersLinkedStories(List<IterationKpiModalValue> overAllUnlinkedmodalValues, // NOSONAR
+	private void filtersLinkedStories(Map<String, IssueKpiModalValue> issueKpiModalObject, // NOSONAR
 			List<JiraIssue> unlinkedDefect, JiraIssue jiraIssue, Map<String, JiraIssue> totalStoriesMap,
-			FieldMapping fieldMapping, List<JiraIssue> linkedJiraIssueStoryList,
-			Map<String, IterationKpiModalValue> modalObjectMap, Map<String, JiraIssue> linkedIssueMap) {
+			FieldMapping fieldMapping, List<JiraIssue> linkedJiraIssueStoryList, Map<String, JiraIssue> linkedIssueMap,
+			Set<IssueKpiModalValue> issueData) {
 		jiraIssue.getDefectStoryID().forEach(storyNumber -> {
 			totalStoriesMap.computeIfPresent(storyNumber, (k, linkedJiraIssueStory) -> {
 				if (fieldMapping.getJiradefecttype().contains(linkedJiraIssueStory.getTypeName())) {
 					if (!unlinkedDefect.contains(jiraIssue)) {
 						unlinkedDefect.add(jiraIssue);
-						KPIExcelUtility.populateIterationKPI(overAllUnlinkedmodalValues, new ArrayList<>(), jiraIssue,
-								fieldMapping, modalObjectMap);
-						setKpiSpecificData(jiraIssue, fieldMapping, modalObjectMap, new ArrayList<>(), false, null);
+						KPIExcelUtility.populateIssueModal(jiraIssue, fieldMapping, issueKpiModalObject);
+						IssueKpiModalValue data = issueKpiModalObject.get(jiraIssue.getNumber());
+						setKpiSpecificData(fieldMapping, data, new ArrayList<>(), false, null);
+						issueData.add(data);
 					}
 				} else {
 					linkedJiraIssueStoryList.add(linkedJiraIssueStory);
@@ -541,36 +530,35 @@ public class QualityStatusServiceImpl extends JiraIterationKPIService {
 			// fix for DTS-24813
 			totalStoriesMap.computeIfAbsent(storyNumber, k -> {
 				JiraIssue linkedIssue = linkedIssueMap.get(storyNumber);
-				if (linkedIssue != null && fieldMapping.getJiradefecttype().contains(linkedIssue.getTypeName())
-						&& (!unlinkedDefect.contains(jiraIssue))) {
+				if (linkedIssue != null && fieldMapping.getJiradefecttype().contains(linkedIssue.getTypeName()) &&
+						(!unlinkedDefect.contains(jiraIssue))) {
 					unlinkedDefect.add(jiraIssue);
-					KPIExcelUtility.populateIterationKPI(overAllUnlinkedmodalValues, new ArrayList<>(), jiraIssue,
-							fieldMapping, modalObjectMap);
-					setKpiSpecificData(jiraIssue, fieldMapping, modalObjectMap, new ArrayList<>(), false, null);
+					KPIExcelUtility.populateIssueModal(jiraIssue, fieldMapping, issueKpiModalObject);
+					IssueKpiModalValue data = issueKpiModalObject.get(jiraIssue.getNumber());
+					setKpiSpecificData(fieldMapping, data, new ArrayList<>(), false, null);
+					issueData.add(data);
 				}
 				return null;
 			});
 		});
 	}
 
-	private void setKpiSpecificData(JiraIssue jiraIssue, FieldMapping fieldMapping, // NOSONAR
-			Map<String, IterationKpiModalValue> modalObjectMap, List<JiraIssue> linkedJiraIssueStoryList,
-			boolean estimationFlag, List<JiraIssue> completedIssueList) {
-		IterationKpiModalValue jiraIssueModalObject = modalObjectMap.get(jiraIssue.getNumber());
+	private void setKpiSpecificData(FieldMapping fieldMapping, // NOSONAR
+			IssueKpiModalValue jiraIssueModalObject, List<JiraIssue> linkedJiraIssueStoryList, boolean estimationFlag,
+			List<JiraIssue> completedIssueList) {
 		if (CollectionUtils.isNotEmpty(linkedJiraIssueStoryList)) {
 			AtomicReference<Double> storyPoint = new AtomicReference<>(0.0d);
 			Map<String, String> linkedStoriesMap = new HashMap<>();
 			linkedJiraIssueStoryList.forEach(linkedStory -> {
 				linkedStoriesMap.put(linkedStory.getNumber(), linkedStory.getUrl());
 				if (estimationFlag) {
-					if (null != linkedStory.getStoryPoints()
-							&& StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria())
-							&& fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
+					if (null != linkedStory.getStoryPoints() && StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria()) &&
+							fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.STORY_POINT)) {
 						storyPoint.updateAndGet(v -> v + linkedStory.getStoryPoints());
 					}
-					if (null != linkedStory.getOriginalEstimateMinutes()
-							&& StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria()) && fieldMapping
-									.getEstimationCriteria().equalsIgnoreCase(CommonConstant.ACTUAL_ESTIMATION)) {
+					if (null != linkedStory.getOriginalEstimateMinutes() &&
+							StringUtils.isNotEmpty(fieldMapping.getEstimationCriteria()) &&
+							fieldMapping.getEstimationCriteria().equalsIgnoreCase(CommonConstant.ACTUAL_ESTIMATION)) {
 						storyPoint.updateAndGet(v -> v + (double) linkedStory.getOriginalEstimateMinutes() / 480);
 					}
 					if (!completedIssueList.contains(linkedStory)) {
